@@ -15,6 +15,7 @@ S3method(summary,fq)
 S3method(summary,gtf)
 export(exportBed)
 export(exportFA)
+export(exportGTF)
 export(importBed)
 export(importBlastTab)
 export(importFA)
