@@ -2,7 +2,7 @@
 #' GenomicTools.fileHandler is a loose collection of I/O Functions Needed in Genomic Data Analysis
 #' 
 #' \tabular{ll}{ Package: \tab GenomicTools.fileHandler\cr Type: \tab Package\cr Version: \tab
-#' 0.1.5.22\cr Date: \tab 2022-01-23\cr License: \tab GPL\cr LazyLoad: \tab yes\cr
+#' 0.1.5.23\cr Date: \tab 2022-01-23\cr License: \tab GPL\cr LazyLoad: \tab yes\cr
 #' }
 #' 
 #' @name GenomicTools.fileHandler-package
