@@ -29,6 +29,7 @@ Version 0.1.5.x:
 20: bugfix in summary.fa and fq (missing sum)
 21: importSTARlog path adjusted for log files
 22: importGTF: V9 is now split in ";" and "; "
+23: exportGTF() function added
 
 Version 0.1.4 (Stable Version):
 * Improvements of summary functions
